--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+  <div style="width: 600px;"><canvas id="volume"></canvas></div>
+  <div style="width: 600px;"><canvas id="metabolites"></canvas></div>
+  <div style="width: 600px;"><canvas id="atp"></canvas></div>
+
   <script src="emscripten.js"></script>
   <script src="dist/index.js"></script>
 </body>
