--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div style="width: 600px;"><canvas id="atp"></canvas></div>
 
   <script src="emscripten.js"></script>
-  <script src="dist/index.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
